# Car-Damage-Detection-Using-ResNet

./: .gitignore  DEPLOY.md  README.md  docker-compose.yml  pyproject.toml
fastapi-server/: Dockerfile  model_helper.py  requirements.txt  server.py
frontend/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  vite.config.js
frontend/src/: App.css  App.jsx
model/: Car_Damage_Detection.ipynb  hyperparameter_tunning.ipynb
